# fastapi-ddd-boilerplate

./: docker-compose.yaml  pyproject.toml
app/api/v1/: main.py
tests/: conftest.py
tests/app/api/: main_test.py
