[tool.poetry]
name = "FastAPI-DDD-Boilerplate"
version = "1.0.0"
description = "Projetc to provide a boilerplate for FastAPI with DDD"
authors = ["PabloMor <pmopa@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20"
fastapi = "^0.92"
python-dotenv = "^1.0"
python-multipart = "^0.0.5"
email-validator = "^1.3.1"
requests = "^2.28"
pydantic = "^1.10"
gunicorn = "^20.1"
httpx = "^0.23.3"
# jinja2 = "^3.1"
# psycopg2-binary = "^2.9.5"
# alembic = "^1.9"
# sqlalchemy = "^2.0"
pytest = "^7.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}

[tool.poetry.dev-dependencies]
mypy = "^1.0"
black = "^23.1"
isort = "^5.12"
autoflake = "^2.0"
flake8 = "^6.0"
pytest = "^7.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
